--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -1,31 +1,44 @@
-<div class="card toggle-focus my-2 shadow">
-    <div class="card-header">
+{{ form_start(form) }}
+
+<div class="card border-info toggle-focus my-2 shadow active">
+    <div class="card-header text-white bg-info">
         <div class="d-flex justify-content-between">
             <h3>Général</h3>
-            <button type="button" class="update-focus btn btn-primary">Mettre à jour</button>
         </div>
     </div>
     <div class="card-body">
+        {{ form_errors(form) }}
         <div class="row mt-3">
             <div class="col">
                 {{ form_widget(form.period) }}
                 <label placeholder="Période (facultatif)"></label>
                 {{ form_errors(form.domain) }}
                 {{ form_widget(form.domain) }}
-                <label placeholder="Domaine *"></label>
+                <label placeholder="* Domaine"></label>
                 {{ form_widget(form.languages) }}
                 <label placeholder="En quelle(s) langue(s) est dispensé ce cours (facultatif)"></label>
             </div>
             <div class="col">
-                <h6>
-                    Quel est le niveau de ce cours ? *
+                <label class="required font-weight-bold">
+                    Quel est le niveau de ce cours ?
                     <img id="infos_level" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
-                </h6>
+                </label>
                 {{ form_errors(form.level) }}
                 <ul>
                     {{ form_widget(form.level) }}
                 </ul>
             </div>
         </div>
+        <div class="mt-2">
+            <button class="update-focus btn btn-primary submit" type="submit">
+                Sauvegarder
+            </button>
+            <button type="button" class="update-focus btn btn-secondary">
+                Annuler
+            </button>
+        </div>
     </div>
 </div>
+
+{{ form_widget(form._token) }}
+{{ form_end(form, {'render_rest': false }) }}
