--- a/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teaching_mode.html.twig
@@ -1,17 +1,17 @@
+{{ form_start(form) }}
 <div class="card toggle-focus my-2 shadow">
     <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Mode d'enseignement</h3>
-            <button type="button" class="update-focus btn btn-primary">Mettre à jour</button>
         </div>
     </div>
     <div class="card-body">
-
+        {{ form_errors(form) }}
         <div class="row mt-3">
             <div class="col">
                 <div class="row mb-3">
                     <div class="col">
-                        <strong>Quel est votre mode d'enseignement ? *</strong>
+                        <label class="required font-weight-bold">Quel est votre mode d'enseignement ?</label>
                     </div>
                 </div>
                 <div class="row teaching-hours">
@@ -135,5 +135,15 @@
                 </div>
             </div>
         </div>
+        <div class="mt-2">
+            <button class="update-focus btn btn-primary submit" type="submit">
+                Sauvegarder
+            </button>
+            <button type="button" class="update-focus btn btn-secondary">
+                Annuler
+            </button>
+        </div>
     </div>
 </div>
+{{ form_widget(form._token) }}
+{{ form_end(form, {'render_rest': false }) }}
