--- a/app/Resources/views/course_info/presentation/view/general.html.twig
+++ b/app/Resources/views/course_info/presentation/view/general.html.twig
@@ -2,7 +2,7 @@
     <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Général</h3>
-            <button type="button" class="update-focus btn btn-primary">Mettre à jour</button>
+            <button type="button" class="update-focus btn btn-primary" data-url="{{ path('course_presentation_general', {'id': courseInfo.id }) }}">Mettre à jour</button>
         </div>
     </div>
     <div class="card-body">
@@ -12,12 +12,12 @@
                     <div class="d-flex flex-column">
                         <span class="font-weight-bold">
                             {% if courseInfo.period is null %}
-                                <i class="fas fa-exclamation-circle text-danger"></i>
+                                <i class="fas fa-exclamation-circle text-warning"></i>
                             {% endif %}
                             Période
                         </span>
                         {% if courseInfo.period is null %}
-                            <span class="text-danger">
+                            <span class="text-warning">
                                 Non-renseigné
                             </span>
                         {% else %}
@@ -50,12 +50,12 @@
                     <div class="d-flex flex-column">
                         <span class="font-weight-bold">
                             {% if courseInfo.languages is null %}
-                                <i class="fas fa-exclamation-circle text-danger"></i>
+                                <i class="fas fa-exclamation-circle text-warning"></i>
                             {% endif %}
                             Langues
                         </span>
                         {% if courseInfo.languages is null %}
-                            <span class="text-danger">
+                            <span class="text-warning">
                                 Non-renseigné
                             </span>
                         {% else %}
