focus card synopsis

--- a/app/Resources/assets/scss/_custom.scss
+++ b/app/Resources/assets/scss/_custom.scss
@@ -45,7 +45,9 @@ $gray-100: #f8f9fa;
 $body-bg: $gray-100;
 $input-disabled-bg: $gray-100;
 
-
+// Primary
+$primary: #46aed8;
+$secondary: #868e96;
 
 /*
     Full Bootstrap…
