--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -54,6 +54,31 @@ main > small:first-of-type {
 }
 
 /*
+    Card.
+ */
+
+.card-syllabus {
+
+  .card-header {
+    background-color: #fdfdfd;
+
+    h3 {
+      font-weight: 500;
+      text-shadow: 1px 1px 1px #bbb;
+    }
+  }
+}
+
+/*
+    Buttons.
+ */
+
+.button-gradient {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.2) 49%, rgba(0, 0, 0, 0.15) 51%, rgba(0, 0, 0, 0.05)) repeat-x;
+  border-radius: 3px !important;
+}
+
+/*
     Tabs.
 */
 
