--- a/app/Resources/views/course_info/presentation/form/general.html.twig
+++ b/app/Resources/views/course_info/presentation/form/general.html.twig
@@ -1,7 +1,6 @@
-
-<div class="card border-info toggle-focus my-2 shadow active">
+<div class="card border-primary card-syllabus toggle-focus my-2 shadow active">
     {{ form_start(form) }}
-    <div class="card-header text-white bg-info">
+    <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Général</h3>
         </div>
@@ -24,16 +23,14 @@
                     <img id="infos_level" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
                 </label>
                 {{ form_errors(form.level) }}
-                <ul>
-                    {{ form_widget(form.level) }}
-                </ul>
+                {{ form_widget(form.level, {label_attr: {class: 'radio-custom'} }) }}
             </div>
         </div>
         <div class="mt-2">
-            <button type="submit" class="focus-submit btn btn-primary submit" data-url="{{ path('course_presentation_general', {'id': courseInfo.id, 'action': 'submit' }) }}">
+            <button type="submit" class="focus-submit btn btn-primary submit button-gradient" data-url="{{ path('course_presentation_general', {'id': courseInfo.id, 'action': 'submit' }) }}">
                 Sauvegarder
             </button>
-            <button type="button" class="focus-cancel btn btn-secondary" data-url="{{ path('course_presentation_general', {'id': courseInfo.id, 'action': 'cancel' }) }}">
+            <button type="button" class="focus-cancel btn btn-secondary button-gradient" data-url="{{ path('course_presentation_general', {'id': courseInfo.id, 'action': 'cancel' }) }}">
                 Annuler
             </button>
         </div>
