--- a/app/Resources/views/course_info/presentation/form/synopsis.html.twig
+++ b/app/Resources/views/course_info/presentation/form/synopsis.html.twig
@@ -1,6 +1,6 @@
-{{ form_start(form) }}
-<div class="card border-info toggle-focus my-2 shadow">
-    <div class="card-header text-info border-info">
+<div class="card border-primary card-syllabus toggle-focus my-2 shadow active">
+    {{ form_start(form) }}
+    <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Synopsis</h3>
         </div>
@@ -48,7 +48,7 @@
                 <div class="tab-content border p-2">
                     <div class="{{ imageContentClasses }}" id="media_image_container" role="tabpanel">
                         <small class="font-weight-bold">Fichier de type jpeg ou png (2Mo maximum)</small>
-                        {{ form_widget(form.image) }}
+                        {{ form_widget(form.image, {label_attr: {class: 'file-custom'} }) }}
                         {% if form.vars.data.image is not null %}
                             {% if courseInfo.image == form.vars.data.image %}
                                 {% set imgSrc = form.vars.data.image.filename %}
@@ -60,21 +60,21 @@
                     </div>
                     <div class="{{ videoContentClasses }}" id="media_video_container" role="tabpanel">
                         <img id="infos_video" src="{{ asset('images/info_32.png') }}" style="cursor: pointer;">
-                        {{ form_widget(form.video) }}
+                        {{ form_widget(form.video, {label_attr: {class: 'file-custom'} }) }}
                         <label placeholder="URL"></label>
                     </div>
                 </div>
             </div>
         </div>
         <div class="mt-2">
-            <button class="update-focus btn btn-primary submit" type="submit">
+            <button type="submit" class="focus-submit btn btn-primary submit button-gradient" data-url="{{ path('course_presentation_synopsis', {'id': courseInfo.id, 'action': 'submit' }) }}">
                 Sauvegarder
             </button>
-            <button type="button" class="update-focus btn btn-secondary">
+            <button type="button" class="focus-cancel btn btn-secondary button-gradient" data-url="{{ path('course_presentation_synopsis', {'id': courseInfo.id, 'action': 'cancel' }) }}">
                 Annuler
             </button>
         </div>
     </div>
+    {{ form_widget(form._token) }}
+    {{ form_end(form, {'render_rest': false }) }}
 </div>
-{{ form_widget(form._token) }}
-{{ form_end(form, {'render_rest': false }) }}
