--- a/app/Resources/views/course_info/presentation/view/synopsis.html.twig
+++ b/app/Resources/views/course_info/presentation/view/synopsis.html.twig
@@ -1,12 +1,11 @@
-<div class="card toggle-focus my-2 shadow">
+<div class="card toggle-focus my-2 shadow card-syllabus">
     <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Synopsis</h3>
-            <button type="button" class="update-focus btn btn-primary">Mettre à jour</button>
+            <button type="button" class="update-focus btn btn-primary button-gradient" data-url="{{ path('course_presentation_synopsis', {'id': courseInfo.id }) }}">Mettre à jour</button>
         </div>
     </div>
     <div class="card-body">
-
         <div class="row mt-2">
             <div class="col">
                 <div class="d-flex">
@@ -48,7 +47,7 @@
                                 </span>
                         {% elseif courseInfo.video is not null %}
                             <span class="text-muted">
-                                    {{ courseInfo.image }}
+                                    {{ courseInfo.video }}
                                 </span>
                         {% endif %}
                     </p>
