--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,11 +12,7 @@
     {% set in_iframe = true %}
 {% endif %}
 
-{% if in_iframe == false %}
-    {% set container_class = 'container' %}
-{% else %}
     {% set container_class = 'container-fluid' %}
-{% endif %}
 
 {% if dark_background is defined and dark_background == true %}
     {% set body_class = 'bg-black' %}
@@ -46,16 +42,18 @@
         {{ encore_entry_link_tags('app') }}
         {% if not in_iframe %}
             <style>
-                body { padding-bottom: 13rem }
+                body {
+                    padding-bottom: 13rem
+                }
             </style>
         {% endif %}
     {% endblock %}
-
-
+    {{ encore_entry_script_tags('app') }}
 
 </head>
 
 <body class="{{ body_class }}">
+
 <div id="app" class="">
 
     {% if in_iframe == false %}
@@ -92,11 +90,10 @@
     <div id="loading_spinner"></div>
 
     {% block javascripts %}
-        {{ encore_entry_script_tags('app') }}
         <script>
-            $(document).ready(function(){
-                $("body").on("shown.bs.modal", ".modal", function() {
-                    $(this).find('div.modal-dialog').animate("top",$(parent.window.document).scrollTop());
+            $(document).ready(function () {
+                $("body").on("shown.bs.modal", ".modal", function () {
+                    $(this).find('div.modal-dialog').animate("top", $(parent.window.document).scrollTop());
                 });
             });
         </script>
