--- a/app/Resources/views/course/edit_course.html.twig
+++ b/app/Resources/views/course/edit_course.html.twig
@@ -19,75 +19,81 @@
             <div class="col-sm">
 
                 {% if in_iframe == false and courseInfo.title is defined %}
-                    <h2>{{ courseInfo.title }}</h2>
+                    <h2 class="course-title">{{ courseInfo.title }}</h2>
                 {% endif %}
+                <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <ul class="nav nav-tabs">
+                    <div class="collapse navbar-collapse">
+                        <ul class="navbar-nav m-auto">
 
-                    <li class="nav-item">
-                        <a class="nav-link active" id="tab-1"
-                           data-route="{{ path('edit_presentation_course_info', { 'id': courseInfo.id }) }}"
-                           role="tab" data-toggle="tab" href="#panel_tab-1"
-                           aria-controls="panel_tab-1" aria-selected="true">
-                            Présentation générale
-                        </a>
-                    </li>
+                            <li class="nav-item active">
+                                <a class="nav-link" id="tab-1"
+                                   data-route="{{ path('edit_presentation_course_info', { 'id': courseInfo.id }) }}" data-toggle="tab" href="#panel_tab-1"
+                                   aria-controls="panel_tab-1" aria-selected="true">
+                                    Présentation générale
+                                </a>
+                            </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" id="tab-2"
-                           data-route="{{ path('edit_activities_course_info', { 'id': courseInfo.id }) }}"
-                           role="tab" data-toggle="tab" href="#panel_tab-2"
-                           aria-controls="panel_tab-2" aria-selected="false">
-                            Contenu et activités
-                        </a>
-                    </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="tab-2"
+                                   href="{{ path('course_presentation', { 'id': courseInfo.id }) }}" >
+                                    Contenu et activités
+                                </a>
+                            </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" id="tab-3"
-                           data-route="{{ path('edit_objectives_course_info', { 'id': courseInfo.id }) }}"
-                           role="tab" data-toggle="tab" href="#panel_tab-3"
-                           aria-controls="panel_tab-3" aria-selected="false">
-                            Objectifs du cours
-                        </a>
-                    </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="tab-3"
+                                   data-route="{{ path('edit_objectives_course_info', { 'id': courseInfo.id }) }}"
+                                   role="tab" data-toggle="tab" href="#panel_tab-3"
+                                   aria-controls="panel_tab-3" aria-selected="false">
+                                    Objectifs du cours
+                                </a>
+                            </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" id="tab-4"
-                           data-route="{{ path('edit_mcc_course_info', { 'id': courseInfo.id }) }}"
-                           role="tab" data-toggle="tab" href="#panel_tab-4"
-                           aria-controls="panel_tab-4" aria-selected="false">
-                            Modalités d'évaluation
-                        </a>
-                    </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="tab-4"
+                                   data-route="{{ path('edit_mcc_course_info', { 'id': courseInfo.id }) }}"
+                                   role="tab" data-toggle="tab" href="#panel_tab-4"
+                                   aria-controls="panel_tab-4" aria-selected="false">
+                                    Modalités d'évaluation
+                                </a>
+                            </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" id="tab-5"
-                           data-route="{{ path('edit_equipments_course_info', { 'id': courseInfo.id }) }}"
-                           role="tab" data-toggle="tab" href="#panel_tab-5"
-                           aria-controls="panel_tab-5" aria-selected="false">
-                            Matériel et ressources
-                        </a>
-                    </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="tab-5"
+                                   data-route="{{ path('edit_equipments_course_info', { 'id': courseInfo.id }) }}"
+                                   role="tab" data-toggle="tab" href="#panel_tab-5"
+                                   aria-controls="panel_tab-5" aria-selected="false">
+                                    Matériel et ressources
+                                </a>
+                            </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" id="tab-6"
-                           data-route="{{ path('edit_infos_course_info', { 'id': courseInfo.id }) }}"
-                           role="tab" data-toggle="tab" href="#panel_tab-6"
-                           aria-controls="panel_tab-6" aria-selected="false">
-                            Informations pratiques
-                        </a>
-                    </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="tab-6"
+                                   data-route="{{ path('edit_infos_course_info', { 'id': courseInfo.id }) }}"
+                                   role="tab" data-toggle="tab" href="#panel_tab-6"
+                                   aria-controls="panel_tab-6" aria-selected="false">
+                                    Informations pratiques
+                                </a>
+                            </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" id="tab-7"
-                           data-route="{{ path('edit_closing_remarks_course_info', { 'id': courseInfo.id }) }}"
-                           role="tab" data-toggle="tab" href="#panel_tab-7"
-                           aria-controls="panel_tab-7" aria-selected="false">
-                            Le mot de la fin
-                        </a>
-                    </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="tab-7"
+                                   data-route="{{ path('edit_closing_remarks_course_info', { 'id': courseInfo.id }) }}"
+                                   role="tab" data-toggle="tab" href="#panel_tab-7"
+                                   aria-controls="panel_tab-7" aria-selected="false">
+                                    Le mot de la fin
+                                </a>
+                            </li>
 
-                </ul>
+                        </ul>
+                    </div>
+
+                </nav>
+
 
                 <div class="tab-content border border-top-0 p-2">
 
@@ -143,25 +149,25 @@
     {% if courseInfo.id is defined and courseInfo.id %}
         <script>
 
-            Syllabus.tabsInit( );
+            Syllabus.tabsInit();
 
-            $(document).ready(function(){
-                $(document).on('click', '#adviceButton', function(){
-                    SILTools.spinner.fadeIn( {
-                        always: function(){
+            $(document).ready(function () {
+                $(document).on('click', '#adviceButton', function () {
+                    SILTools.spinner.fadeIn({
+                        always: function () {
                             $.ajax({
                                 type: 'POST',
                                 url: '{{ path('ask_for_advice_course_info', { 'id': courseInfo.id })|escape('js') }}'
-                            }).done(function(response){
-                                SILTools.alert( { type: response.messages[0].type, text: response.messages[0].message } );
-                            }).always(function(){
-                                SILTools.spinner.fadeOut( );
+                            }).done(function (response) {
+                                SILTools.alert({type: response.messages[0].type, text: response.messages[0].message});
+                            }).always(function () {
+                                SILTools.spinner.fadeOut();
                             });
                         }
                     });
                 });
 
-                $(document).on('click', '#publishButton', function(){
+                $(document).on('click', '#publishButton', function () {
                     bootbox.confirm({
                         message: "Avant de publier votre syllabus pensez à renseigner le formulaire vous permettant de béneficier de la prime <a target='_blank' href='https://forms.office.com/Pages/ResponsePage.aspx?id=fUQgvFKJzUqD5F1otezkb78RiPD675VPioqx3pigUrJUNUtBRUlZU1lYMUw3NDZGQVEzU1hQNzJaSC4u'>en cliquant ici</a> et à rendre votre cours visible sur Moodle.",
                         buttons: {
@@ -176,15 +182,15 @@
                         },
                         callback: function (result) {
                             if (result === true) {
-                                SILTools.spinner.fadeIn( {
-                                    always: function(){
+                                SILTools.spinner.fadeIn({
+                                    always: function () {
                                         $.ajax({
                                             type: 'POST',
                                             url: '{{ path('publish_course_info', { 'id': courseInfo.id })|escape('js') }}'
-                                        }).done(function(response){
+                                        }).done(function (response) {
                                             Syllabus.handleAjaxResponse(response);
-                                        }).always(function(){
-                                            SILTools.spinner.fadeOut( );
+                                        }).always(function () {
+                                            SILTools.spinner.fadeOut();
                                         });
                                     }
                                 });
@@ -193,7 +199,7 @@
                     });
                 });
 
-                $(document).on('click', '#infos_publication', function(){
+                $(document).on('click', '#infos_publication', function () {
                     var message = '<p>' +
                         'Si vous n\'avez toujours pas renseigné le formulaire pour l\'obtention de la prime Syllabus veuillez <a target="_blank" href="https://forms.office.com/Pages/ResponsePage.aspx?id=fUQgvFKJzUqD5F1otezkb78RiPD675VPioqx3pigUrJUNUtBRUlZU1lYMUw3NDZGQVEzU1hQNzJaSC4u">cliquer ici</a>' +
                         '</p>' +
