--- a/app/Resources/views/course_info/presentation/form/teachers.html.twig
+++ b/app/Resources/views/course_info/presentation/form/teachers.html.twig
@@ -1,5 +1,5 @@
-{{ form_start(form) }}
-<div class="card toggle-focus my-2 shadow">
+<div class="card border-primary card-syllabus toggle-focus my-2 shadow active">
+    {{ form_start(form) }}
     <div class="card-header">
         <div class="d-flex justify-content-between">
             <h3>Équipe enseignante</h3>
@@ -9,37 +9,64 @@
         {{ form_errors(form) }}
         <div class="row mt-3">
             <div class="col">
-                <div class="row mb-3">
+                <div>
                     <div class="col">
                         <label class="required font-weight-bold">Qui fait partie de l'équipe enseignante ?</label>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-8">
-                        {{ form_widget(form.teacherSearch) }}
-                    </div>
-                    <div class="col-4">
-                        {{ form_widget(form.teacherSource) }}
-                        <label placeholder="Source"></label>
-                    </div>
+                <div class="mb-2">
+                    <label placeholder="Source"></label>
+                    {{ form_widget(form.teacherSource) }}
                 </div>
-                <div class="row">
-                    <div class="col">
-                        {{ form_errors(form.courseTeachers) }}
-                        {{ form_widget(form.courseTeachers) }}
-                    </div>
+                <div class="mb-2">
+                    {{ form_widget(form.login) }}
+                </div>
+                <div class="mb-2">
+                    {{ form_widget(form.emailVisibility, { label_attr: {class: 'checkbox-custom'}}) }}
+                    {{ form_widget(form.manager, { label_attr: {class: 'checkbox-custom'}}) }}
                 </div>
             </div>
         </div>
         <div class="mt-2">
-            <button class="update-focus btn btn-primary submit" type="submit">
-                Sauvegarder
+            <button type="submit" class="focus-submit btn btn-primary submit button-gradient" data-url="{{ path('course_presentation_teachers', {'id': courseInfo.id, 'action': 'submit' }) }}">
+                Ajouter
             </button>
-            <button type="button" class="update-focus btn btn-secondary">
+            <button type="button" class="focus-cancel btn btn-secondary button-gradient" data-url="{{ path('course_presentation_teachers', {'id': courseInfo.id, 'action': 'cancel' }) }}">
                 Annuler
             </button>
         </div>
     </div>
+    {{ form_widget(form._token) }}
+    {{ form_end(form, {'render_rest': false }) }}
 </div>
-{{ form_widget(form._token) }}
-{{ form_end(form, {'render_rest': false }) }}
+
+<script src="{{ asset('bundles/tetranzselect2entity/js/select2entity.js') }}"></script>
+<script>
+
+    $(document).ready(function(){
+        let select2minimumInputLength = 2;
+        $('#teachers_login').select2({
+            minimumInputLength: select2minimumInputLength,
+            language: 'fr',
+
+            ajax: {
+                url: '{{ path('teachers_select2_list') }}',
+                dataType: 'json',
+                delay: 250,
+                data: function (params)
+                {
+                    return {
+                        q: params.term,
+                        source: $('#teachers_teacherSource').val()
+                    };
+                },
+                processResults: function (data) {
+                    return {
+                        results: data
+                    };
+                }
+            }
+        });
+    });
+
+</script>
