--- a/app/Resources/views/admin_layout.html.twig
+++ b/app/Resources/views/admin_layout.html.twig
@@ -45,6 +45,18 @@
 {% endblock %}
 
 {% block content %}
+
+    {% for type, flash_messages in app.session.flashBag.all %}
+        {% for msg in flash_messages %}
+            <div class="alert alert-{{ type }} alert-dismissible fade show" role="alert">
+                {{ msg }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    {% endfor %}
+
     <div class="content-header">
         <div class="container-fluid">
             <div class="row mb-2">
