--- a/app/Resources/views/year/index.html.twig
+++ b/app/Resources/views/year/index.html.twig
@@ -3,9 +3,9 @@
 {% block subContent %}
 
     <div class="card">
-        {#<div class="card-header">
-            <a class="btn btn-primary float-right mb-3" href="#">Ajouter une année</a>
-        </div>#}
+        <div class="card-header">
+            <a class="btn btn-primary float-right mb-3" href="{{ path('app_admin_year_new') }}">Ajouter une année</a>
+        </div>
         <!-- /.card-header -->
         <div class="card-body">
             {% if pagination.totalItemCount > 0 %}
