--- a/app/Resources/views/admin_layout.html.twig
+++ b/app/Resources/views/admin_layout.html.twig
@@ -37,7 +37,14 @@
                         </p>
                     </a>
                 </li>
-
+                <li class="nav-item">
+                    <a href="{{ path('app_admin_user_index') }}" class="nav-link">
+                        <i class="nav-icon fas fa-user"></i>
+                        <p>
+                            Utilisateurs
+                        </p>
+                    </a>
+                </li>
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
