--- a/app/Resources/views/year/index.html.twig
+++ b/app/Resources/views/year/index.html.twig
@@ -4,12 +4,12 @@
 
     <div class="card">
         <div class="card-header">
-            <a class="btn btn-primary float-right mb-3" href="{{ path('app_admin_year_new') }}">Ajouter une année</a>
+            <a class="btn btn-primary float-right" href="{{ path('app_admin_year_new') }}">Ajouter une année</a>
         </div>
         <!-- /.card-header -->
         <div class="card-body">
             {% if pagination.totalItemCount > 0 %}
-                <table class="table table-bordered table-responsive-sm dataTable">
+                <table class="table table-bordered table-responsive-sm">
                     <thead>
                     <tr>
                         <th class="sortable">{{ knp_pagination_sortable(pagination, 'Année', 'y.label') }}</th>
@@ -34,9 +34,11 @@
             {% endif %}
         </div>
         <!-- /.card-body -->
-        <div class="card-footer clearfix">
-            {{ knp_pagination_render(pagination) }}
-        </div>
+        {% if knp_pagination_render(pagination) %}
+            <div class="card-footer clearfix">
+                {{ knp_pagination_render(pagination) }}
+            </div>
+        {% endif %}
     </div>
 
 {% endblock %}
