--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -19,7 +19,7 @@
                     <tbody>
                     {% for user in pagination %}
                         <tr>
-                            <td>{{ user.username }}</td>
+                            <td><a href="{{ path('app_admin_user_edit', { 'id' : user.id }) }}">{{ user.username }}</a></td>
                             <td>{{ user.lastname }}</td>
                             <td>{{ user.firstname }}</td>
                             <td>{{ user.email }}</td>
