--- a/app/Resources/views/course_info/presentation/presentation.html.twig
+++ b/app/Resources/views/course_info/presentation/presentation.html.twig
@@ -1,6 +1,6 @@
 {% extends 'course_info/layout.html.twig' %}
 
-{% block content %}
+{% block subContent %}
 
     <section>
         {% include('course_info/presentation/view/general.html.twig') %}
