modification des années done

--- a/app/Resources/assets/scss/app.scss
+++ b/app/Resources/assets/scss/app.scss
@@ -125,6 +125,12 @@ label.required:before {
   color: red;
 }
 
+.custom-switch {
+  label.required:before {
+    content: "";
+  }
+}
+
 input[type=text] {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
